<resources>
    <string name="input_account">请输入账号或手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="bt_login">登录</string>
    <string name="tv_forget_pass">忘记密码?</string>
    <string name="tv_fast_registered">快速注册!</string>
    <string name="third_login">其他账号登录</string>
    <string name="app_name">睿学堂</string>
    <string name="app_exit_tip">再按一次退出客户端</string>
    <string name="exercises">练习</string>
    <string name="study">学习</string>
    <string name="navi_tbm_group">作业</string>
    <string name="navi_tbm_my">我的</string>
    <string name="send_verCode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="input_verCode">请输入验证码</string>
    <string name="input_mobile">请输入绑定或注册的手机号</string>
    <string name="verCode_progress">%dS</string>
    <string name="register_password">请输入6&#8211;18位密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="register_input_mobile">请输入手机号</string>
    <string name="register">注册</string>
    <string name="send_verCode_more">再次获取</string>
    <string name="input_true_account">请输入正确的账号</string>
    <string name="input_true_password">请输入正确的密码</string>
    <string name="input_true_mobile">请输入正确的手机号码</string>
    <string name="input_true_verCode">请输入正确的验证码</string>
    <string name="input_password_error">密码不符合要求</string>
    <string name="send_verCode_finish">验证码已发送,请注意查收</string>
    <string name="bt_reset_passWord">确认重置</string>
    <string name="input_password_not_same">两次输入密码不一致</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="net_null">网络未连接，请检查后重试</string>
    <string name="data_error">出错了，请稍后再试</string>
    <string name="net_data_error">页面加载失败...</string>
    <string name="retry">点击重试</string>
    <string name="input_true_name">请输入真实姓名</string>
    <string name="user_name">姓名</string>
    <string name="school">学校</string>
    <string name="period">学段</string>
    <string name="what_is_class_1">班级是由老师在“尚学院（教师端）”中创建，给学生布置批改作业的班级群。</string>
    <string name="what_is_class_2">每个睿学堂班级都有一个8位数班级号码，如：“班级号码：12345678”。</string>
    <string name="how_to_join_class_1">第一步： 老师在“尚学院（教师端）”中创建班级，并将班级号码分享或告知学生们。</string>
    <string name="how_to_join_class_2">第二步：同学们在“睿学堂（学生端）”作业页面，输入班级号码，即可加入班级，然后就可以通过手机来完成老师布置的作业了。</string>
    <string name="homework_todo"> • %1$d份待完成</string>
    <string name="student_count">%1$d人</string>
    <string name="check_homework_done"> • 查看已完成</string>
    <string name="homework_done_num">完成题量 </string>
    <string name="homework_remain_time">剩余时间</string>
    <string name="can_redo">可补做</string>
    <string name="over_deadline">逾期未交</string>
    <string name="comment"><![CDATA[
    <b>%1$s评语：</b>
    ]]>%2$s</string>
    <string name="homework_done_uncheck">已完成，等待老师批改</string>
    <string name="homework_checked">已批改</string>
    <string name="title_homework">作业</string>
    <string name="class_info">班级信息</string>
    <string name="join_class">加入班级</string>
    <string name="cacel_apply_for_class">取消申请</string>
    <string name="exit_class">退出班级</string>
    <string name="guid_join_class">怎样加入班级？</string>
    <string name="input_school_name">请输入学校名字</string>
    <string name="input_school_text_location">范围：</string>
    <string name="class_number_error">请输入正确的班级号</string>
    <string name="class_id">班级号码</string>
    <string name="teacher_name">老师姓名</string>
    <string name="student_number">班级成员</string>
    <string name="school_name">学校名称</string>
    <string name="input_user_name">你的姓名</string>
    <string name="input_user_true_name">请输入你的真实姓名</string>
    <string name="previous_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="score_rate">正确率</string>
    <string name="text_loading">这回真没了</string>
    <string name="text_click_to_load_more">点击加载更多</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="click_to_retry">点击重试</string>
    <string name="load_failed">页面加载失败...</string>
    <string name="class_no_homework">您加入的班级尚未布置过作业</string>
    <string name="apply_for_class_checking">入班申请正在审核中...</string>
    <string name="primary_txt">小学</string>
    <string name="juinor_txt">初中</string>
    <string name="high_txt">高中</string>
    <string name="ok">确定</string>
    <string name="search_school_no">没有搜索到相应学校</string>
    <string name="input_correct_class_number">请输入正确的班级号</string>
    <string name="class_not_allowed_join">此班级不允许学生加入</string>
    <string name="question">问题</string>
    <string name="SINGLE_CHOICE">单选题</string>
    <string name="MULTI_CHOICES">多选题</string>
    <string name="FILL_BLANK">填空</string>
    <string name="JUDGE">判断</string>
    <string name="CONNECT">连线</string>
    <string name="CLASSIFY">归类</string>
    <string name="ANSWER">问答题</string>
    <string name="READING">阅读理解</string>
    <string name="CLOZE">完形填空</string>
    <string name="LISTEN">听力</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="no_install_weixin">您还没有安装微信！</string>
    <string name="no_install_qq">您还没有安装QQ！</string>
    <string name="man">男</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="resetpassword">重置密码</string>
    <string name="iwantregister">注册</string>
    <string name="addclass">加入班级</string>
    <string name="submitname">提交姓名</string>
    <string name="chooselocation">选择地区</string>
    <string name="chooseschool">选择学校</string>
    <string name="choosestage">选择学段</string>
    <string name="class_cannot_join">此班级不允许学生加入</string>
    <string name="complete">完成</string>
    <string name="complete_message">完善资料</string>
    <string name="skip_join_class">没有班级可加,跳过此步</string>
    <string name="person">人</string>
    <string name="update_asynctask_downloading">正在下载</string>
    <string name="update_asynctask_downloading_fail">下载失败</string>
    <string name="update_asynctask_downloading_cel">取消下载</string>
    <string name="update_asynctask_downloading_success">下载完成</string>
    <string name="update_new">当前已是最新版本！</string>
    <string name="app_update">检测到新版本%s</string>
    <string name="app_update_sure">更新</string>
    <string name="app_update_cancle">取消</string>
    <string name="app_update_inoge">忽略</string>
    <string name="app_update_exit">退出</string>
    <string name="listen_time">/</string>
    <string name="begin_answer">开始作答...</string>
    <string name="submit_homework_button">提交</string>
    <string name="submit__button_retry">再试一次</string>
    <string name="analysis_text">题目解析</string>
    <string name="baocuo_text">报错</string>
    <string name="subject_submit">开始作答</string>
    <string name="camera_film">相机胶卷</string>
    <string name="crop_reset">还原</string>
    <string name="SD_cannot_use">没有检测到内存卡</string>
    <string name="answer">作答详情</string>
    <string name="answer_result">作答结果</string>
    <string name="answer_difficulty">难度</string>
    <string name="answer_point">知识点</string>
    <string name="answer_voice_scolded">老师批语</string>
    <string name="answer_answer">答案</string>
    <string name="answer_sscore_title">得分</string>
    <string name="answer_analysis_title">题目解析</string>
    <string name="answer_sscore_string">分</string>
    <string name="answer_no">回答错误</string>
    <string name="answer_yes">回答正确</string>
    <string name="answer_half_right">部分正确</string>
    <string name="answer_no_pigai">未批改</string>
    <string name="teacher_no_pigai">老师未批改</string>
    <string name="voice_url_error">音频文件无法播放</string>
    <string name="analysis_error_type">错误类型</string>
    <string name="analysis_error_tag1">题干有误</string>
    <string name="analysis_error_tag2">答案有误</string>
    <string name="analysis_error_tag3">解析有误</string>
    <string name="analysis_error_tag4">章节信息有误</string>
    <string name="analysis_error_tag5">知识点有误</string>
    <string name="analysis_error_tag6">其他有误</string>
    <string name="analysis_error_content">请输入错误详情(200字以内)</string>
    <string name="analysis_error_submit_text">提交</string>
    <string name="analysis_error_submit_succes">提交成功</string>
    <string name="analysis_error_submit_fail">提交失败</string>
    <string name="question_judge">判断题</string>
    <string name="question_fill_blanks">填空题</string>
    <string name="question_classfy">归类题</string>
    <string name="question_reading">材料题</string>
    <string name="question_listen_complex">听力题</string>
    <string name="question_cloze_complex">完型填空</string>
    <string name="question_translation">翻译题</string>
    <string name="question_read_complex">阅读理解</string>
    <string name="question_solve_complex">解答题</string>
    <string name="question_choice_single">单选题</string>
    <string name="question_choice_multi">多选题</string>
    <string name="question_subjective">主观题</string>
    <string name="question_subjects_were">改错题</string>
    <string name="question_sorting">排序题</string>
    <string name="question_connect">连线题</string>
    <string name="question_compute">计算题</string>
    <string name="correct">正确</string>
    <string name="wrong">错误</string>
    <string name="no_picture">本题未作答</string>
    <string name="rationale_camera">此应用程序需要访问您的相机，以便您可以拍照.</string>
    <string name="rationale_write_read">此应用程序需要读取sd卡权限，请前往设置.</string>
    <string name="rationale_other">此应用程序需要申请使用权限，请前往设置.</string>
    <string name="no_camera_permissions">相机权限被禁用，请在权限设置中开启</string>
    <string name="no_storage_permissions">存储权限被禁用，请在权限设置中开启</string>
    <string name="classify_drawer_noAnswer">当前类别下内容为空</string>
    <string name="classify_drawer_noClassify">未归类</string>
    <string name="mistake_redo_math">数学</string>
    <string name="mistake_redo_english">英语</string>
    <string name="clear_text">清空</string>
    <string name="join_class_success">加入成功</string>
    <string name="need_verify">提交成功，等待老师审核</string>
    <string name="check_analysis">查看解析</string>
    <string name="my_mistake">我的错题</string>
    <string name="topic">题</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>
    <string name="political">政治</string>
    <string name="biological">生物</string>
    <string name="geographic">地理</string>
    <string name="chemical">化学</string>
    <string name="physical">物理</string>
    <string name="history">历史</string>
    <string name="can_not_view_report">%s之后才能查看报告</string>
    <string name="dot">•</string>
    <string name="setting_bind_mobile">绑定手机</string>
    <string name="bind_mobile_success">绑定成功</string>
    <string name="setting_change_password">修改密码</string>
    <string name="setting_check_updata">检查更新</string>
    <string name="setting_about">关于</string>
    <string name="setting_sound">声音</string>
    <string name="setting_login_out">退出登录</string>
    <string name="check_mobile">手机号码验证</string>
    <string name="bind_new_mobile">绑定新手机</string>
    <string name="zhagnhao">账号：</string>
    <string name="exercise_history">练习历史</string>
    <string name="teaching_material_version">教材版本</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="change_password_input">请输入6&#8211;18位新密码</string>
    <string name="change_password_input_again">请确认新密码</string>
    <string name="change_sure">确认修改</string>
    <string name="input_password_old_error">原密码错误</string>
    <string name="input_password_new_error">新密码不符合要求</string>
    <string name="change_password_success">修改成功</string>
    <string name="about_wx">微信公众号</string>
    <string name="about_wx_code">小尚老师的数字课堂</string>
    <string name="about_qq">QQ群</string>
    <string name="about_qq_code">438863057</string>
    <string name="about_privacy">隐私政策</string>
    <string name="stage_change">学段更改后，练习将切换到相应学段。</string>
    <string name="stage_change_true">你确定要更改吗？</string>
    <string name="stage_change_text">更改</string>
    <string name="new_project">爱学习 , 就来睿学堂</string>
    <string name="new_project_name">轻松做题,让学习拥有美好的体验</string>
    <string name="experience">立即体验</string>
</resources>