<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="315dp"
        android:layout_height="210dp"
        android:layout_marginTop="77dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/answercard_submit_state_bg">

        <TextView
            android:id="@+id/state_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:text="@string/stage_change_true"
            android:textColor="@color/color_336600"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/state_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/stage_change"
            android:textColor="@color/color_69ad0a"
            android:textSize="16dp" />

        <com.yanxiu.gphone.student.customviews.WavesLayout
            android:id="@+id/wave_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            app:waves_animend_alpha="102"
            app:waves_radius="@dimen/wavesRadius">

            <Button
                android:id="@+id/button_no"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/selector_answercard_no_button_bg"
                android:text="@string/app_update_cancle"
                android:textColor="@drawable/selector_answercard_no_text_color"
                android:textSize="@dimen/answer_card_submitbutton_textsize" />
        </com.yanxiu.gphone.student.customviews.WavesLayout>

        <com.yanxiu.gphone.student.customviews.WavesLayout
            android:id="@+id/wave_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            app:waves_animend_alpha="102"
            app:waves_radius="@dimen/wavesRadius">

            <Button
                android:id="@+id/button_yes"
                android:layout_width="135dp"
                android:layout_height="50dp"
                android:background="@drawable/selector_answercard_yes_button_bg"
                android:text="@string/stage_change_text"
                android:textColor="@drawable/selector_answercard_no_text_color"
                android:textSize="@dimen/answer_card_submitbutton_textsize" />
        </com.yanxiu.gphone.student.customviews.WavesLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/state_topimg"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:background="@color/color_33ffff" />

</RelativeLayout>