<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_89e00d">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/include"
            layout="@layout/layout_login_top_image" />

        <RelativeLayout
            android:id="@+id/rl_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include"
            android:layout_marginTop="@dimen/dimen_10">

            <LinearLayout
                android:id="@+id/ll_mobile"
                style="@style/LoginLayoutButton"
                android:background="@drawable/shape_login_edit_top"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_mobile"
                    style="@style/LoginEdit"
                    android:hint="@string/register_input_mobile"
                    android:inputType="number"
                    android:maxLength="11" />

                <ImageView
                    android:id="@+id/iv_clear"
                    android:layout_width="@dimen/dimen_13"
                    android:layout_height="@dimen/dimen_13"
                    android:layout_marginEnd="@dimen/dimen_13"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@null"
                    android:visibility="invisible" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_ver_code"
                style="@style/LoginLayoutButton"
                android:layout_below="@+id/ll_mobile"
                android:layout_marginTop="@dimen/dimen_2"
                android:background="@drawable/shape_login_edit_center"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_ver_code"
                    style="@style/LoginEdit"
                    android:hint="@string/input_verCode"
                    android:inputType="number"
                    android:maxLength="4" />

                <View
                    android:layout_width="@dimen/dimen_2"
                    android:layout_height="@dimen/dimen_18"
                    android:background="@color/color_89e00d" />

                <TextView
                    android:id="@+id/tv_send_verCode"
                    android:layout_width="@dimen/dimen_103"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/send_verCode"
                    android:textColor="@drawable/selector_send_vercode_text_color"
                    android:textSize="@dimen/dimen_16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pass_word"
                style="@style/LoginLayoutButton"
                android:layout_below="@+id/ll_ver_code"
                android:layout_marginTop="@dimen/dimen_2"
                android:background="@drawable/shape_login_edit_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_pass_word"
                    style="@style/LoginEdit"
                    android:hint="@string/register_password"
                    android:inputType="textPassword"
                    android:maxLength="18" />

                <ImageView
                    android:id="@+id/iv_cipher"
                    android:layout_width="@dimen/dimen_13"
                    android:layout_height="@dimen/dimen_13"
                    android:layout_marginEnd="@dimen/dimen_13"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@null" />

            </LinearLayout>

            <com.yanxiu.gphone.student.util.view.WavesLayout
                android:id="@+id/wl_forget_waves"
                style="@style/LoginLayoutButton"
                android:layout_below="@+id/ll_pass_word"
                android:layout_marginTop="@dimen/dimen_15"
                app:waves_animend_alpha="102"
                app:waves_canshowwave="false"
                app:waves_radius="@dimen/dimen_5">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:background="@drawable/selector_common_button_bg"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/color_89e00d"
                    android:textSize="@dimen/dimen_18sp" />

            </com.yanxiu.gphone.student.util.view.WavesLayout>
        </RelativeLayout>
    </RelativeLayout>


</ScrollView>